WIP: loading default data not found image

--- a/src/components/widgets/sales-leads-funnel/sales-leads-funnel.tmpl.html
+++ b/src/components/widgets/sales-leads-funnel/sales-leads-funnel.tmpl.html
@@ -52,7 +52,7 @@
 
     </div>
 
-    <div ng-show="(isDataFound==false)" common-data-not-found widget-engine="::widget.category" />
+    <div ng-show="(isDataFound==false)" common-data-not-found widget-engine="::widget.category" widget-width="::widget.width" />
   </div>
 
 </div>
